samples/_failures_safe/1761664132_6432cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_160a4fc5.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_160a4fc5.c:188:5: error: expected expression at end of input
  188 |     printf("Dijkstra distances from vertex %d:\n",
      |     ^~~~~~
./samples/SAFE/__tmp_160a4fc5.c:188:5: error: expected declaration or statement at end of input
